Fix watermark in show view on mobile.

--- a/app/assets/stylesheets/iphone.css.scss
+++ b/app/assets/stylesheets/iphone.css.scss
@@ -19,4 +19,8 @@
   #header {
     margin-top: 30px !important;
   }
+  .add-watermark-large {
+    height: 52px;
+    width: 80px;
+  }
 }
